[package]
name = "api-key-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
axum-test = "15.7.0"
