[package]
name = "api-key-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
# axum-auth-provider = { git = "https://github.com/fdionisi/axum-auth-provider", version = "0.1.0" }
axum-auth-provider = { path = "../axum-auth" }
clap = { version = "4.5.21", features = ["derive"] }
jsonwebtoken = "8.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
axum-test = "15.7.0"
